<resources>
    <string name="app_name">TextFlashCards</string>
    <string name="action_settings">Settings</string>
        <string name="menu_settings">Settings</string>
        <string name="menu_open_test">Open Test ...</string>
        <string name="menu_exit">Exit</string>
        <string name="menu_reset">Reset counters</string>
        <string name="menu_show_stats">Show stats</string>
        <string name="menu_import_words">Import</string>
        <string name="menu_export_words">Export</string>
        <string name="menu_delete_all">Delete All Cards</string>
        <string name="max_passes_descr">Number of correct answers before moving card to the archive</string>
        <string name="title_activity_add_word">AddWordActivity</string>
        <string name="add_word">Add card</string>
        <string name="menu_help">Help</string>
        <string name="swap_q_a">Swap question/answer</string>
</resources>
