<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/menu_add_word" android:orderInCategory="10" android:title="@string/add_word"></item><item android:id="@+id/menu_import_words" android:title="@string/menu_import_words" android:orderInCategory="13"></item>
    <item android:id="@+id/menu_export_words" android:orderInCategory="15" android:title="@string/menu_export_words"></item>
    <item android:id="@+id/menu_reset" android:orderInCategory="20" android:title="@string/menu_reset"></item>
    <item android:id="@+id/menu_delete_all" android:orderInCategory="25" android:title="@string/menu_delete_all"></item>
    <item android:id="@+id/menu_settings" android:title="@string/menu_settings" android:orderInCategory="30"></item>
    <item android:id="@+id/menu_exit" android:title="@string/menu_exit" android:orderInCategory="40"></item>
    <item android:id="@+id/menu_help" android:orderInCategory="38" android:title="@string/menu_help"></item>
    <item android:id="@+id/menu_stats" android:title="@string/menu_show_stats" android:orderInCategory="15"></item>
</menu>